--- a/WebOptixSuccessAuth/Components/OrderManager/OrderVendorManagerComponent.razor
+++ b/WebOptixSuccessAuth/Components/OrderManager/OrderVendorManagerComponent.razor
@@ -1,9 +1,9 @@
 ﻿@using CoreBusiness.Models
 @using Services
-
+@inject NavigationManager NavigationManager
 @inject Plugins.DataStore.SQL.AppDbContext dbContext
 
-<RadzenPanel AllowCollapse="true" Style="margin: 10px" Off>
+<RadzenPanel AllowCollapse="true" Style="margin: 10px" class="order-vendor manager border-vendor" Off>
     <HeaderTemplate>
         <h4 class="m-0 d-flex align-items-center">
             <RadzenIcon Icon="terminal" Class="mr-1" /><b>Управление заказом для поставщика</b>
@@ -21,7 +21,7 @@
 
             <div class="col-md-5">
                 <p>Позиций: <wbr/>@SelectedOrderVendor?.ItemOrders.Count()</p>
-                <p><i>Дополнительная информация</i></p>
+                <p>Количество товаров: <wbr/>@SelectedOrderVendor?.ItemOrders.Sum( x => x.Quantity )</p>
             </div>
             <div class="col-md-2">
                 <button type="button" @onclick="@DeleteOrder" class="btn btn-link">
@@ -61,6 +61,10 @@
             }
             UpdateCallback.InvokeAsync();
         }
+    }
+    protected void EditOrder()
+    {
+        NavigationManager.NavigateTo($"/edit-order-vendor/{SelectedOrderVendor.OrderVendorId}");
     }
     protected void SendEmail()
     {
