--- a/WebOptixSuccessAuth/Components/RadzenMasterDetailComponent.razor
+++ b/WebOptixSuccessAuth/Components/RadzenMasterDetailComponent.razor
@@ -9,7 +9,7 @@
 
 <div class="row">
     <div class="col-12 col-lg-5 col-xl-4">
-        <RadzenPanel AllowCollapse="true" Style="margin: 10px" On>
+        <RadzenPanel AllowCollapse="true" Style="margin: 10px" class="order-customer border-customer" On>
             <HeaderTemplate>
                 <h4 class="m-0 d-flex align-items-center">
                     <RadzenIcon Icon="person_pin" Class="mr-1" /><b>Заказы от покупателей</b>
@@ -47,7 +47,7 @@
             </RadzenPanel>
         
         <hr/>
-        <RadzenPanel AllowCollapse="true" Style="margin: 10px" >
+        <RadzenPanel AllowCollapse="true" Style="margin: 10px" class="order-vendor card border-vendor">
             <HeaderTemplate>
                 <h4 class="m-0 d-flex align-items-center">
                     <RadzenIcon Icon="person_pin" Class="mr-1" /><b>Заказы для поставщиков</b>
