--- a/WebOptixSuccessAuth/Shared/NavMenu.razor
+++ b/WebOptixSuccessAuth/Shared/NavMenu.razor
@@ -81,7 +81,7 @@
 
                 <li class="nav-item px-3">
                     <NavLink class="nav-link" >
-                        <span class="oi oi-account-logout"></span>
+                        <span class="oi oi-account-logout color-white"></span>
                         <form method="post" action="Identity/Account/LogOut">
                             <button type="submit" class="nav-link btn btn-link" style="color:white;">Выход</button>
                         </form>
