--- a/WebOptixSuccessAuth/Components/ButtonEditComponent.razor
+++ b/WebOptixSuccessAuth/Components/ButtonEditComponent.razor
@@ -1,17 +1,19 @@
 ﻿@inject NavigationManager NavigationManager
 
-<button tupe="button" @onclick="@(() => OnClickEdit())" class="btn btn-link">
-    <i class="fas fa-edit"></i> @Text
-</button>
+@if (Id > 0 || !string.IsNullOrWhiteSpace(Text) || !string.IsNullOrWhiteSpace(TypeName))
+{
+    <button tupe="button" @onclick="@(() => OnClickEdit())" class="btn btn-link">
+        <i class="fas fa-edit"></i> @Text
+    </button>
+}
 
 @code {
-
-    [Parameter] public string Id { get; set; }
-    [Parameter] public string Text { get; set; }
-    [Parameter] public string TypeName { get; set; }
+    [Parameter] public int Id { get; set; } = 0;
+    [Parameter] public string Text { get; set; } = "";
+    [Parameter] public string TypeName { get; set; } = "";
 
     protected void OnClickEdit()
     {
-        NavigationManager.NavigateTo($"/edit{TypeName}/{Id}");
+        NavigationManager.NavigateTo($"/edit{TypeName}/{Id.ToString()}");
     }
 }
