--- a/WebOptixSuccessAuth/Pages/Customers/EditCustomer.razor
+++ b/WebOptixSuccessAuth/Pages/Customers/EditCustomer.razor
@@ -29,7 +29,7 @@
             <label for="password">Пароль</label>
             <InputText id="password" @bind-Value="customer.Password" class="form-control"></InputText>
         </div>
-
+        nge 
         <div class="form-group">
             <label for="email">Email</label>
             <InputText id="email" @bind-Value="customer.Email" class="form-control"></InputText>
@@ -59,21 +59,20 @@
     [Parameter]
     public string CustomerId { get; set; }
 
-    private Customer customer;
+    private Customer? customer { get; set; }
 
     protected override void OnInitialized()
     {
         base.OnInitialized();
-        customer = new Customer();
     }
 
     protected override void OnParametersSet()
     {
         base.OnParametersSet();
-        if (int.TryParse(this.CustomerId, out int iCustomerId)) 
-        {
-            this.customer = dbContext.Customers.Find(iCustomerId);
-        }
+        //if (int.TryParse(this.CustomerId, out int iCustomerId)) 
+        //{
+        //    this.customer = dbContext.Customers.Find(iCustomerId);
+        //}
     }
 
     private void OnValidSubmit()
