--- a/WebApp/Components/OrderCustomerWidgetComponent.razor
+++ b/WebApp/Components/OrderCustomerWidgetComponent.razor
@@ -50,7 +50,7 @@
                                 <td>@GetItemOrdersByOrderCustomerIdUseCase.Execute(orderCustomer.OrderCustomerId).Count()</td>
                                 <td>@GetItemOrdersByOrderCustomerIdUseCase.Execute(orderCustomer.OrderCustomerId).Sum(n => n.Quantity)</td>
                                 <td>
-                                    <ButtonEditComponent TypeName="orderCustomer" Id="@orderCustomer.OrderCustomerId.ToString()"></ButtonEditComponent>
+                                    <ButtonEditComponent TypeName="orderCustomer" Id="@orderCustomer.OrderCustomerId.ToString()" />
                                     <button type="button" @onclick="@(() => DeleteOrderCustomer(orderCustomer.OrderCustomerId))" class="btn btn-link">
                                         <i class="far fa-trash-alt"></i>
                                     </button>
