--- a/WebOptixSuccessAuth/Pages/Customers/EditCustomer.razor
+++ b/WebOptixSuccessAuth/Pages/Customers/EditCustomer.razor
@@ -8,7 +8,7 @@
 @using WebOptixSuccessAuth.Components
 
 
-<h3>Редактирование клиента +</h3>
+<h3>Редактирование клиента (id: @(Convert.ToString(customer?.CustomerId) ))</h3>
 
 @if(customer == null)
 {
@@ -17,6 +17,11 @@
     <EditForm Model="customer"  OnValidSubmit="OnValidSubmit">
         <DataAnnotationsValidator></DataAnnotationsValidator>
         <ValidationSummary></ValidationSummary>
+
+        <div class="form-group">
+            <label for="company">Организация</label>
+            <InputText id="company" @bind-Value="customer.Company" class="form-control"></InputText>
+        </div>
 
         <div class="form-group">
             <label for="name">Login</label>
@@ -29,18 +34,8 @@
         </div>
 
         <div class="form-group">
-            <label for="password">Пароль</label>
-            <InputText id="password" @bind-Value="customer.Password" class="form-control"></InputText>
-        </div>
-        nge 
-        <div class="form-group">
             <label for="email">Email</label>
             <InputText id="email" @bind-Value="customer.Email" class="form-control"></InputText>
-        </div>
-
-        <div class="form-group">
-            <label for="company">Организация</label>
-            <InputText id="company" @bind-Value="customer.Company" class="form-control"></InputText>
         </div>
 
         <div class="form-group">
@@ -51,6 +46,11 @@
         <div class="form-group">
             <label for="description">Описание</label>
             <InputTextArea id="description" @bind-Value="customer.Description" class="form-control"></InputTextArea>
+        </div>
+
+        <div class="form-group">
+            <label for="password">Пароль</label>
+            <InputText id="password" @bind-Value="customer.Password" class="form-control"></InputText>
         </div>
 
         <button type="submit" class="btn btn-primary">Save</button>
@@ -72,9 +72,9 @@
     protected override void OnParametersSet()
     {
         base.OnParametersSet();
-        if (int.tryparse(this.customerid, out int icustomerid)) 
+        if (int.TryParse(this.CustomerId, out int iCustomerid)) 
         {
-            this.customer = dbcontext.customers.find(icustomerid);
+            this.customer = dbContext.Customers.Find(iCustomerid);
         }
     }
 
