--- a/WebOptixSuccessAuth/Components/OrderManager/OrderVendorManagerComponent.razor
+++ b/WebOptixSuccessAuth/Components/OrderManager/OrderVendorManagerComponent.razor
@@ -27,8 +27,9 @@
                 <button type="button" @onclick="@DeleteOrder" class="btn btn-link">
                     <i class="far fa-trash-alt"></i> Удалить
                 </button><br/>
-                <ButtonEditComponent Id="@(SelectedOrderVendor?.OrderVendorId ?? default(int))" 
-                    Text="Редактировать" Url="edit-order-vendor" Icon="far fa-edit" />
+                <button type="button" @onclick="@OnClickEditOrderVendor" class="btn btn-link">
+                    <i class="far fa-edit"></i> Редактировать
+                </button>
             </div>
         </div>
         <div class="row">
@@ -50,6 +51,9 @@
 
     [Parameter]
     public EventCallback UpdateCallback { get; set; }
+
+    protected void OnClickEditOrderVendor()
+        => NavigationManager.NavigateTo($"/edit-order-vendor/{SelectedOrderVendor.OrderVendorId}");
 
     protected void DeleteOrder()
     {
