--- a/WebOptixSuccessAuth/Pages/OrderCustomers/OrderCustomers.razor
+++ b/WebOptixSuccessAuth/Pages/OrderCustomers/OrderCustomers.razor
@@ -12,23 +12,36 @@
 <RadzenButton Text="Обновить" Click="@Reset" Style="margin-bottom: 20px;" />
 
     <RadzenDataGrid @ref="gridRef" IsLoading=@isLoading Count="@count" Data="@orderCustomers" LoadData="@LoadData" TItem="OrderCustomer"
-        AllowSorting="true" AllowFiltering="true" 
+        AllowSorting="false" AllowFiltering="false" 
         AllowPaging="true" PageSize="10" PagerHorizontalAlign="HorizontalAlign.Center" PageSizeOptions="@pageSizeOptions"
         AllowColumnResize="true"
         ColumnWidth="200px"   >
         <Columns>
             <RadzenDataGridColumn TItem="OrderCustomer" Property="OrderCustomerId" Title="ID" Frozen="true" Width="70px" TextAlign="TextAlign.Center" />
             
-
+            <RadzenDataGridColumn TItem="OrderCustomer" Property="OrderCustomer.Customer.Name" Title="Покупатель" Frozen="true" Width="70px" TextAlign="TextAlign.Center" />
 
             <RadzenDataGridColumn TItem="OrderCustomer" Property="Description" Title="Description" Width="100px" />
-             <RadzenDataGridColumn TItem="OrderCustomer" >
+
+            <RadzenDataGridColumn TItem="OrderCustomer" Property="OrderCustomer" Title="Кол-во позиций" Width="70px" TextAlign="TextAlign.Center" >
+                 <Template Context="orderCustomer">
+                     @dbContext.ItemOrders.Where(x => x.OrderCustomerId == orderCustomer.CustomerId).Count()
+                 </Template>
+            </RadzenDataGridColumn>
+
+            <RadzenDataGridColumn TItem="OrderCustomer" Property="OrderCustomer" Title="Кол-во товаров" Width="70px" TextAlign="TextAlign.Center" >
+                 <Template Context="orderCustomer">
+                     @dbContext.ItemOrders.Sum(x => x.Quantity)
+                 </Template>
+            </RadzenDataGridColumn>
+
+            <RadzenDataGridColumn TItem="OrderCustomer" >
                  <Template Context="orderCustomers">
                      <RadzenButton Icon="delete_forever" ButtonStyle="ButtonStyle.Light"
                             Click="@(() => OnClickDelete(orderCustomers.OrderCustomerId))">
                      </RadzenButton>
                  </Template>
-             </RadzenDataGridColumn>
+            </RadzenDataGridColumn>
         </Columns>
     </RadzenDataGrid>
 
